--- a/SportsStoreEcommerce/css/style.css
+++ b/SportsStoreEcommerce/css/style.css
@@ -39,6 +39,14 @@
 }
 
 @font-face {
+    font-family: 'Montserrat-light';
+    src: url('../fonts/Montserrat/montserrat-light-webfont.woff2') format('woff2'),
+        url('../fonts/Montserrat/montserrat-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'Montserrat-bold';
     src: url('../fonts/Montserrat/montserrat-bold-webfont.woff2') format('woff2'),
         url('../fonts/Montserrat/montserrat-bold-webfont.woff') format('woff');
@@ -230,16 +238,19 @@ a {
     letter-spacing: 5px;
 }
 
+.header-btn {
+
+}
+
 .btn-discount {
-    min-width: 160px;
+    display: block;
+    width: 125px;
     font-size: 17px;
     color: #fff;
     margin: 0;
-    margin-left: 300px;
-    padding-top: 19px;
-    padding-bottom: 17px;
-    padding-left: 29px;
-    padding-right: 26px;
+    margin-top: 60px;
+    margin-left: 463px;
+    padding: 16px 23px 17px 22px;
     font-family: 'Montserrat-regular';
     text-align: center;
     text-transform: uppercase;
@@ -250,17 +261,16 @@ a {
 
 /********************* Shipping **********************/
 .shipping {
-
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .shipping__list {
     display: flex;
-    max-width: 1500px;
     padding: 0;
     margin: 0;
     margin-top: -73px;
-    margin-left: auto;
-    margin-right: auto;
     list-style: none;
     background-color: #fff;
 }
@@ -329,4 +339,161 @@ a {
 .bg-shipping-3,
 .bg-shipping-4 {
     background-image: url(../img/png/ring-bg.png);
+}
+
+
+
+/********************* Offer **********************/
+
+.offer-of-month {
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.offer-of-month__list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.offer-of-month__item {
+    min-width: 750px;
+    background-color: #f2f0f0;
+}
+.offer-name {
+    margin: 0;
+    margin-top: 124px;
+    margin-bottom: 35px;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Poppins-semibold';
+    line-height: 25.07px;
+    font-size: 20.43px;
+    color: #616161;
+}
+
+.offer-heading {
+    margin: 0;
+    margin-bottom: 43px;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 44.1px;
+    font-size: 42.99px;
+    font-family: 'BebasNeueBold';
+    color: #0d2e57;
+}
+
+.offer-description {
+    width: 495px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 43px;
+    text-align: justify;
+    line-height: 30px;
+    font-size: 18px;
+    font-family: 'Montserrat-light';
+    color: #8a8a8a;
+}
+
+.price-continer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 55px;
+}
+
+.offer-price {
+    margin: 0;
+    margin-right: 53px;
+    line-height: 62.4px;
+    font-size: 52px;
+    font-family: 'Montserrat-bold';
+    color: #3954d9;
+}
+.old-offer-price {
+    margin: 0;
+    text-decoration: line-through;
+    line-height: 58.14px;
+    font-size: 32.61px;
+    font-family: 'Montserrat-semibold';
+    color: #121212;
+}
+.bg-offer {
+    background-image: url(../img/jpg/offer-img.jpg);
+    background-repeat: no-repeat;
+}
+
+.offer-timer {
+    max-width: 312px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 42px;
+}
+
+.timer-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+}
+
+.timer-description {
+}
+
+.timer-hours,
+.timer-minutes,
+.timer-seconds {
+    text-align: center;
+}
+
+.timer-hours,
+.timer-minutes,
+.timer-seconds {
+   background-color: #fff;
+   border-radius: 20px;
+   padding: 25px 20px 22px 20px;
+}
+
+.timer-dots,
+.timer-number,
+.timer-description {
+    margin: 0;
+    font-family: 'Montserrat-semibold';
+}
+
+.timer-number {
+    line-height: 31.89px;
+    font-size: 38.22px;
+}
+
+.timer-description {
+    font-size: 11px;
+    text-transform: uppercase;
+}
+
+.offer-btn {
+    /* display: block;
+    min-width: 125px;
+    padding: 16px 17px 23px 22px;
+    font-family: 'Montserrat-regular';
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #3954d9;
+    border-radius: 25px; */
+    display: block;
+    width: 125px;
+    font-size: 17px;
+    color: #fff;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 28px;
+    padding: 16px 23px 17px 22px;
+    font-family: 'Montserrat-regular';
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #3954d9;
+    border-radius: 25px;
 }
