--- a/SportsStoreEcommerce/css/style.css
+++ b/SportsStoreEcommerce/css/style.css
@@ -512,12 +512,26 @@ a {
     list-style: none;
 }
 
+.products-item-repeat {
+    width: 750px;
+    height: 375px;
+    background-image: url(../img/jpg/Layer-product.jpg);
+    background-repeat: no-repeat;
+}
+
 .products-item {
     width: 375px;
     height: 375px;
 }
 
+.products-item img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .products-item__heading {
+    margin-left: 55px;
     font-size: 25px;
     line-height: 25.65px;
     font-family:'BebasNeueBold';
@@ -537,7 +551,73 @@ a {
     color: #818181;
     text-decoration: line-through;
 }
-.products-discount
-.sg-up-btn
+
+.products-discount {
+    background-image: url(../img/jpg/Rectangle-product.jpg);
+    background-repeat: no-repeat;
+}
+
+.products-discount__heading {
+    margin-left: 55px;
+    font-size: 59.62px;
+    font-family: 'BebasNeueBold';
+    font-weight: 400;
+    line-height: 61.16px;
+    letter-spacing: -1.49px;
+    color: #fff;
+}
+
+.products-discount-price {
+    max-width: 250px;
+    margin-left: 55px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: 'Montserrat-regular';
+    line-height: 20px;
+    letter-spacing: 5.6px;
+    color: #fff;
+
+}
+
+.sg-up-btn {
+    display: block;
+    width: 125px;
+    margin-left: 55px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+    border-radius: 25px;
+    color: #fff;
+    background-color:#3954d9;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 16.27px;
+    font-family: 'Montserrat-regular';
+}
+
+.repeat-heading {
+    margin-left: 50px;
+    font-family:'Poppins-bold';
+    font-style: italic;
+    font-size: 59.62px;
+    line-height: 61.16px;
+    letter-spacing: -1.49px;
+    color: #fff;
+    text-transform: uppercase;
+}
 .bg-prod-1
-.btn-prod
+.btn-prod {
+    display: block;
+    width: 125px;
+    margin-left: 53px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+    border-radius: 25px;
+    color: #121212;
+    background-color:#65cbff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 16.27px;
+    font-family: 'Montserrat-regular'; 
+}
