--- a/SportsStoreEcommerce/css/style.css
+++ b/SportsStoreEcommerce/css/style.css
@@ -129,6 +129,7 @@ a {
     margin: 0;
     list-style: none;
     font-family: 'Montserrat-semibold';
+    letter-spacing: 0.325px;
 }
 
 .header__menu-item {
@@ -218,24 +219,25 @@ a {
     margin-top: 180px;
     margin-left: 250px;
     color: #fff;
+    font-size: 203.66px;
     line-height: 147.24px;
+    letter-spacing: -15.2px;
     text-transform: uppercase;
     text-align: center;
-    font-size: 203.66px;
     font-family: 'Poppins-bold';
-    letter-spacing: -17px;
 }
 
 .discount-description {
     width: 600px;
     margin: 0;
-    margin-left: 250px;
+    margin-left: 260px;
     font-family: 'Montserrat-bold';
     text-align: center;
     text-transform: uppercase;
     color: #fff;
-    font-size: 20px;
-    letter-spacing: 5px;
+    line-height: 29.5px;
+    font-size: 20.65px;
+    letter-spacing: 8.26px;
 }
 
 .header-btn {
@@ -508,8 +510,9 @@ a {
 .produtcs-list {
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .products-item-repeat {
@@ -522,15 +525,22 @@ a {
 .products-item {
     width: 375px;
     height: 375px;
+    box-sizing: border-box;
+    border: 1px solid #818181
 }
 
 .products-item img {
+    max-width: 327px;
+    max-height: 196px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .products-item__heading {
+    display: flex;
+    text-align: center;
+    align-items: center;
     margin-left: 55px;
     font-size: 25px;
     line-height: 25.65px;
@@ -538,7 +548,13 @@ a {
     color: #0d2e57;
 }
 
+.new-price,
+.old-price {
+    display: inline-block;
+}
+
 .new-price {
+    margin-left: 55px;
     font-family: 'Montserrat-semibold';
     font-size: 10px;
     line-height: 25.65px;
@@ -606,6 +622,7 @@ a {
     text-transform: uppercase;
 }
 .bg-prod-1
+
 .btn-prod {
     display: block;
     width: 125px;
@@ -620,4 +637,58 @@ a {
     font-size: 13px;
     line-height: 16.27px;
     font-family: 'Montserrat-regular'; 
+}
+
+.clk-here {
+    width: 1500px;
+    height: 81px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clk-here-link {
+    font-family: 'Montserrat-semibold';
+    font-size: 13px;
+    line-height: 25.65px;
+    color: #3753da;
+    text-transform: uppercase;
+}
+
+/********************* Gallery **********************/
+.gallery {
+    width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+}
+
+.gallery-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+}
+
+.gallery-item{
+    overflow: hidden;
+    height: 100%;
+}
+
+.gallery-item img{
+    display: block;
+    width: 375px;
+    height: 375px;
+    transition: 1s;
+}
+
+.gallery-item:hover {
+    opacity: 0.3;
+    transition: opacity 0.5s ease;
+}
+
+.gallery-item img:hover {
+    transform: scale(1.1);
 }
