--- a/SportsStoreEcommerce/css/style.css
+++ b/SportsStoreEcommerce/css/style.css
@@ -141,6 +141,12 @@ a {
     font-size: 13px;
     color: #fff;
     line-height: 25.65px;
+    transition: color 0.2s ease;
+}
+
+.header__menu-link:hover {
+    color: #c7c7c7;
+    transition: color 0.2s ease;
 }
 
 .header__social-list {
@@ -240,10 +246,6 @@ a {
     letter-spacing: 8.26px;
 }
 
-.header-btn {
-
-}
-
 .btn-discount {
     display: block;
     width: 125px;
@@ -258,8 +260,13 @@ a {
     text-transform: uppercase;
     background-color: #3954d9;
     border-radius: 25px;
+    transition: background-color 0.4s ease;
 }
 
+.btn-discount:hover {
+    background-color: #0f34ee;
+    transition: background-color 0.4s ease;
+}
 
 /********************* Shipping **********************/
 .shipping {
@@ -425,6 +432,7 @@ a {
 .bg-offer {
     background-image: url(../img/jpg/offer-img.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .offer-timer {
@@ -439,9 +447,6 @@ a {
     justify-content: space-between;
     list-style: none;
     padding: 0;
-}
-
-.timer-description {
 }
 
 .timer-hours,
@@ -497,7 +502,13 @@ a {
     text-align: center;
     text-transform: uppercase;
     background-color: #3954d9;
+    transition: background-color 0.4s ease;
     border-radius: 25px;
+}
+
+.offer-btn:hover {
+    background-color: #0f34ee;
+    transition: background-color 0.4s ease;
 }
 
 /********************* Products **********************/
@@ -508,6 +519,7 @@ a {
 }
 
 .produtcs-list {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -520,27 +532,37 @@ a {
     height: 375px;
     background-image: url(../img/jpg/Layer-product.jpg);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .products-item {
     width: 375px;
     height: 375px;
     box-sizing: border-box;
-    border: 1px solid #818181
+    border-right: 1px solid #c7c7c7;
+    border-bottom: 1px solid #c7c7c7;
+}
+
+.products-item:nth-child(7n + 1) {
+    box-sizing: border-box;
+    border-left: 1px solid #c7c7c7;
 }
 
 .products-item img {
     max-width: 327px;
-    max-height: 196px;
+    height: 200px;
+    margin-top: 25px;
+    overflow: hidden;
+    object-fit: none;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .products-item__heading {
-    display: flex;
-    text-align: center;
-    align-items: center;
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 5px;
     margin-left: 55px;
     font-size: 25px;
     line-height: 25.65px;
@@ -551,6 +573,7 @@ a {
 .new-price,
 .old-price {
     display: inline-block;
+    margin: 0;
 }
 
 .new-price {
@@ -570,7 +593,9 @@ a {
 
 .products-discount {
     background-image: url(../img/jpg/Rectangle-product.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
+    border: none;
 }
 
 .products-discount__heading {
@@ -609,6 +634,12 @@ a {
     font-size: 13px;
     line-height: 16.27px;
     font-family: 'Montserrat-regular';
+    transition: background-color 0.4s ease;
+}
+
+.sg-up-btn:hover {
+    background-color: #0f34ee;
+    transition: background-color 0.4s ease;
 }
 
 .repeat-heading {
@@ -621,7 +652,9 @@ a {
     color: #fff;
     text-transform: uppercase;
 }
-.bg-prod-1
+.bg-prod-1 {
+    border: none;
+}
 
 .btn-prod {
     display: block;
@@ -637,9 +670,16 @@ a {
     font-size: 13px;
     line-height: 16.27px;
     font-family: 'Montserrat-regular'; 
+    font-weight: 600;
+}
+
+.btn-prod:hover {
+    background-color: #1eabf1;
+    transition: background-color 0.4s ease;
 }
 
 .clk-here {
+    position: relative;
     width: 1500px;
     height: 81px;
     display: flex;
@@ -648,11 +688,26 @@ a {
 }
 
 .clk-here-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     font-family: 'Montserrat-semibold';
     font-size: 13px;
     line-height: 25.65px;
     color: #3753da;
     text-transform: uppercase;
+    transition: all 0.4s ease;
+}
+
+.clk-here-link:hover {
+    background-color: #3954d9;
+    color: #fff;
+    transition: all 0.4s ease;
 }
 
 /********************* Gallery **********************/
@@ -673,6 +728,7 @@ a {
 }
 
 .gallery-item{
+    position: relative;
     overflow: hidden;
     height: 100%;
 }
@@ -684,37 +740,280 @@ a {
     transition: 1s;
 }
 
-.gallery-item:hover {
-    opacity: 0.3;
-    transition: opacity 0.5s ease;
-}
-
-.gallery-item img:hover {
+.gallery-item:hover img{
+    opacity: 0.5;
     transform: scale(1.1);
+    transition: all 0.5s ease;
 }
 
+.gallery-item:hover .more-info-container {
+    opacity: 1;
+    transition: opacity 0.6s ease;
+}
+
+.more-info-container {
+    width: 100%;
+    margin-top: 150px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    text-align: center;
+    transition: opacity 0.6s ease;
+}
+
+.more-info-description {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 25px;
+    color: #fff;
+    font-family:'Montserrat-regular';
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.more-info-link {
+    text-transform: uppercase;
+}
 
 /********************* Brends **********************/
 .brends {
     width: 1500px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    z-index: 2;
 }
 
 .brends-list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
+    margin: 0;
+    background-color: #fff;
+    
 }
 
 .brend-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 250px;
     height: 250px;
+    box-sizing: border-box;
+    border-right: 1px solid #bdbdbd;
+    border-bottom: 1px solid #bdbdbd;
+    transition: background-color 0.3s ease;
+   
 }
 
-.img-brend {
-    
+.brend-item:nth-child(6n + 1) {
+    box-sizing: border-box;
+    border-left: 1px solid #bdbdbd;
+}
+
+.brend-item img {
+    transition: transform 0.4s ease;
+}
+
+.brend-item:hover img{
+    transform: scale(1.1);
+    transition: transform 0.4s ease;
+}
+
+.brend-item:hover {
+    background-color: #eeeeee;
+    transition: background-color 0.3s ease;
+}
+/********************* Footer **********************/
+.footer {
+    width: 1800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -87px;
+    padding-top: 170px;
+    padding-bottom: 150px;
+    background-image: url(../img/jpg/footer-bg.jpg);
+    z-index: 1;
+}
+
+.footer-links {
+    display: flex;
+}
+
+.footer-menu {
+    display: flex;
+    margin-left: 188px;
+}
+
+.info-list,
+.customer-list,
+.shops-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-right: 115px;
+}
+.main-link {
+    margin: 0;
+    font-size: 25px;
+    line-height: 30px;
+    letter-spacing: 0.45px;
+    color: #3753da;
+    font-family: 'Poppins-regular';
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.second-link {
+    line-height: 30px;
+    letter-spacing: 0.45px;
+    color: #fff;
+    font-family: 'Poppins-regular';
+}
+
+.second-link:hover {
+    border-bottom: 1px solid #fff;
+}
+
+.shops-list li:nth-child(2),
+.customer-list li:nth-child(2),
+.info-list li:nth-child(2) {
+    margin-top: 50px;
+}
+
+.social-list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-top: 25px;
+    margin-bottom: 90px;
+    list-style: none;
+}
+
+.social-item {
+    width: 43px;
+    height: 43px;
+    margin-right: 35px;
+    border-radius: 100%;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.bg-footer-social-1,
+.bg-footer-social-2,
+.bg-footer-social-3,
+.bg-footer-social-4,
+.bg-footer-social-5,
+.bg-footer-social-6 {
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.bg-footer-social-1 {
+    background-image: url(../img/svg/google+.svg);
+    background-size: 35px;
+}
+
+.bg-footer-social-2 {
+    background-image: url(../img/svg/pinterest.svg);
+    background-size: 25px;
+}
+
+.bg-footer-social-3 {
+    background-image: url(../img/svg/vimeo.svg);
+    background-size: 25px;
+}
+
+.bg-footer-social-4 {
+    background-image: url(../img/svg/facebook.svg);
+    background-size: 25px;
+}
+
+.bg-footer-social-5 {
+    background-image: url(../img/svg/twitter.svg);
+    background-size: 25px;
+}
+
+.bg-footer-social-6 {
+    background-image: url(../img/svg/rss.svg);
+    background-size: 20px;
+}
+
+.sign-up-input {
+    width: 404px;
+    height: 39px;
+    margin-top: 15px;
+    margin-bottom: 28px;
+    outline: none;
+    border: none;
+    font-size: 20px;
+    color: #3753da;
+    background-color: #2f2f2f;
+    font-family: 'Poppins-regular';
+    font-weight: 400;
+    border-radius: 25px;
+}
+
+input {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.sign-up-btn {
+    display: block;
+    width: 125px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 25px;
+    color: #fff;
+    background-color:#3954d9;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 16.27px;
+    font-family: 'Montserrat-regular';
+    transition: background-color 0.4s ease;
+}
+
+.sign-up-btn:hover {
+    background-color: #0f34ee;
+    transition: background-color 0.4s ease;
+}
+
+.line {
+    width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 85px;
+    border-bottom: 2px solid #2f2f2f;
+}
+
+.copyright {
+    display: inline-block;
+    margin: 0;
+    margin-top: 55px;
+    margin-left: 190px;
+    font-size: 15.2px;
+    line-height: 30px;
+    letter-spacing: 0.38px;
+    color: #6a6a6a;
+    font-family: 'Poppins-regular';
+}
+
+.method-payments {
+    display: inline-block;
+    position: absolute;
+    width: 270px;
+    height: 30px;
+    margin-top: 44px;
+    margin-left: 777px;
+    background-image: url(../img/png/method-pay.png);
+    background-repeat: no-repeat;
 }
