--- a/TaxiCabService/css/style.css
+++ b/TaxiCabService/css/style.css
@@ -46,6 +46,24 @@
     font-style: normal;
 }
 
+body {
+    font-family: 'latoblack';
+}
+
+.heading-title {
+    margin: 0;
+    font-size: 43.94px;
+    text-align: center;
+    line-height: 40px;
+    text-transform: uppercase;
+}
+
+.heading-title span {
+    font-size: 35px;
+    color: #ffc61a;
+    line-height: 32px;
+}
+
 /* Header */
 .header {
     position: relative;
@@ -68,7 +86,6 @@
     margin: 0;
     padding: 0;
     line-height: 32px;
-    font-family:'latoblack';
     font-size: 40.36px;
     color: #fff;
 }
@@ -82,7 +99,6 @@
     margin: 0;
     padding: 0;
     color: #fff;
-    font-family:'latoblack';
     font-size: 15.01px;
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -109,14 +125,12 @@
 .menu-link {
     text-decoration: none;
     color: #fff;
-    font-family: 'latoblack';
     font-size: 17px;
     text-transform: uppercase;
 }
 
 .heading {
     margin: 0;
-    font-family:'latoblack';
     font-size: 35.74px;
     color: #ffc61a;
     text-transform: uppercase;
@@ -125,7 +139,6 @@
 
 .header-number {
     margin: 0;
-    font-family:'latoblack';
     font-size: 72.26px;
     color: #fff;
     text-align: center;
@@ -133,7 +146,6 @@
 
 .header-site {
     margin: 0;
-    font-family: 'latoblack';
     font-size: 20px;
     letter-spacing: 14.4px;
     color: #fff;
@@ -159,7 +171,6 @@
 
 .booking__heading {
     margin: 0;
-    font-family: 'latoblack';
     font-size: 50px;
     text-transform: uppercase;
 }
@@ -180,11 +191,6 @@
 .read-more-btn {
     display: block;
     width: 105px;
-    /* display: block;
-    width: 166px;
-    height: 48px;
-    margin-top: 50px;
-    margin-bottom: 50px; */
     border-radius: 10px;
     padding: 15px 32px 12px 35px;
     background-color: black;
@@ -207,7 +213,6 @@
 .bkng-container-heading {
     margin: 0;
     padding: 26px 0px 26px 37px;
-    font-family: 'latoblack';
     font-size: 34.43px;
     text-transform: uppercase;
     color: #fff;
@@ -292,26 +297,39 @@
     margin: 0 auto;
 }
 
+.our-tariffs {
+    padding: 63px 0px 0px 0px;
+    color: #000;
+}
+
 .tarifs__list {
     padding: 0;
-    margin: 261px 0px 0px 0px;
+    margin: 133px 0px 0px 0px;
     display: flex;
     justify-content: space-around;
     list-style: none;
 }
 
 .tarif-item {
+    position: relative;
     max-width: 373px;
     min-height: 424px;
 }
 
 .popular-tarif {
     background-color: #ffc61a;
+    background-image: url(../img/png/Rectangle.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.bg-tariffs {
+    position: absolute;
+    margin-top: -85px;
 }
 
 .tarif-heading {
     margin: 124px 0px 31px 0px;
-    font-family:'latoblack';
     font-size: 30.42px;
     text-align: center;
     line-height: 22px;
@@ -328,7 +346,6 @@
 
 .tarif-price {
     margin: 0px 0px 35px 0px;
-    font-family: 'latoblack';
     font-size: 43.94px;
     color: #ffc61a;
     text-align: center;
@@ -348,4 +365,111 @@
     color: #fff;
     background-color: #1b1b1b;
     line-height: 21px;
+}
+
+/* We-do */
+.we-do {
+    width: 1600px;
+    height: 753px;
+    margin: 0 auto;
+    background-image: url(../img/png/we-do-best-bg.png);
+    background-size: contain;
+}
+
+.we-do__heading {
+    padding-top: 81px;
+    color: #fff;
+}
+
+.wish-list {
+    margin: 0;
+    padding: 80px 0px 0px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+}
+
+.wish-item {
+    max-width: 486px;
+    margin-bottom: 80px;
+}
+
+.wish-item:nth-child(2n + 2) {
+    margin-left: 189px;
+} 
+
+.wish-heading {
+    margin: 0px 0px 23px 0px;
+    padding-left: 116px;
+    font-size: 25px;
+    color: #ffc61a;
+    line-height: 25px;
+    text-transform: uppercase;
+}
+
+.wish-description {
+    margin: 0;
+    padding-left: 116px;
+    font-family: 'latoregular';
+    font-size: 18px;
+    color: #fff;
+}
+
+.btn-wish {
+    margin: 0 auto;
+    color: #000;
+    background-color: #ffc61a;
+    line-height: 21px;
+}
+
+.bg-wish-1, .bg-wish-2, .bg-wish-3, .bg-wish-4 {
+    background-repeat: no-repeat;
+    background-position: top left;
+}
+
+.bg-wish-1 {
+    background-image: url(../img/png/home.png);
+}
+
+.bg-wish-2 {
+    background-image: url(../img/png/bonuses.png);
+}
+
+.bg-wish-3 {
+    background-image: url(../img/png/fast.png);
+}
+
+.bg-wish-4 {
+    background-image: url(../img/png/gps.png);
+}
+
+/* Download app */
+.download {
+    width: 1600px;
+    height: 650px;
+    margin: 0 auto;
+    background-image: url(../img/png/download-app.png);
+    background-repeat: no-repeat;
+    background-position: 949px 150px;
+}
+
+.download__heading {
+    padding: 65px 0px 82px 0px;
+}
+
+
+.free-download {
+    margin: 0;
+    font-size: 25.48px;
+    line-height: 32px;
+}
+
+.download-description {
+    font-family: 'latoregular';
+    font-size: 18px;
+}
+
+.free-download, .download-description {
+    margin-left: 331px;
 }
